<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/playlistImg"
        android:layout_width="183dp"
        android:layout_height="166dp"
        android:contentDescription="@string/song_img"
        android:src="@drawable/music_player_icon_slash_screen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/curved"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/playlistName"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:layout_marginEnd="5dp"
        android:contentDescription="@string/playlist_name"
        android:ellipsize="marquee"
        android:gravity="center"
        android:marqueeRepeatLimit="marquee_forever"
        android:singleLine="true"
        android:text="@string/playlist_name"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/playlistDeleteBtn"
        app:layout_constraintTop_toBottomOf="@+id/playlistImg"
        tools:ignore="TextSizeCheck" />

    <ImageButton
        android:id="@+id/playlistDeleteBtn"
        android:layout_width="39dp"
        android:layout_height="37dp"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/playlist_delete"
        android:src="@drawable/baseline_delete_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playlistImg"
        tools:ignore="TouchTargetSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>