<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="16dp"
    android:gravity="center_horizontal"
    tools:context=".SongsListActivity">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_margin="16dp"
        android:id="@+id/cover_image_view"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Hindi"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:gravity="center"
        android:id="@+id/name_text_view"/>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:dividerColor="@color/black"
        android:layout_marginVertical="8dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/songs_list_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="451dp"

        />
    <RelativeLayout
        android:id="@+id/player_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner"
        android:padding="5dp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="592dp">

        <ImageView
            android:id="@+id/song_cover_image_view"
            android:layout_width="50dp"
            android:layout_height="50dp" />

        <TextView
            android:id="@+id/song_title_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/song_cover_image_view"
            android:paddingStart="16dp"
            android:text="Đang phát : "
            android:textColor="@color/black"
            android:textSize="20sp" />


    </RelativeLayout>

    <LinearLayout
        layout="@layout/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bottom_navigation"
        android:layout_alignParentBottom="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" >
        <Button
            android:id="@+id/homeBtn"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:contentDescription="@string/home"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:drawableTop="@drawable/home_icon" />

        <Button
            android:id="@+id/searchBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/search"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:drawableTop="@drawable/search_icon">
        </Button>
        <Button
            android:id="@+id/favouriteBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/favourite"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:drawableTop="@drawable/favorite_icon">
        </Button>
        <Button
            android:id="@+id/playlistBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/playlist"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:drawableTop="@drawable/playlist_add_icon">
        </Button>

    </LinearLayout>

</LinearLayout>