<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlaylistDetails">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="2dp">


        <TextView
            android:id="@+id/moreInfoPD"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:contentDescription="@string/playlist"
            android:gravity="center"
            android:text="@string/playlist"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            android:singleLine="true"
            android:background="@color/cool_pink"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutDetails"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout"
        android:layout_marginTop="10dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/playlistImgPD"
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:src="@drawable/music_player_icon_slash_screen"
            tools:ignore="ImageContrastCheck" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/playlistDetailsRV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingBottom="200dp"
        android:scrollbarThumbVertical="@drawable/scroll_bar_icon"
        android:scrollbars="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutDetails" />


    <!--for buttons-->
    <RelativeLayout
        android:id="@+id/player_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/button"
        android:background="@drawable/rounded_corner"
        android:padding="5dp"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/song_cover_image_view"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/playing" />

        <TextView
            android:id="@+id/song_title_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/song_cover_image_view"
            android:paddingStart="16dp"
            android:text="@string/playing"
            android:textColor="@color/black"
            android:textSize="20sp"
            tools:ignore="RtlSymmetry" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/addBtnPD"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/add_song"
            android:drawableLeft="@drawable/add1_icon"
            android:text="@string/add_song"
            android:textColor="@color/black"
            android:textAllCaps="false"
            tools:ignore="RtlHardcoded,VisualLintButtonSize" />

        <!--Remove Button-->
        <Button
            android:id="@+id/removeAllPD"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/remove_all"
            android:drawableLeft="@drawable/remove_icon"
            android:text="@string/remove_all"
            android:textColor="@color/black"
            android:textAllCaps="false"
            tools:ignore="RtlHardcoded" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>