<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlaylistActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearlayout"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="2dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/playlist"
            android:gravity="center"
            android:text="@string/favourite"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/playlistRV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:paddingBottom="40dp"
        android:scrollbarThumbVertical="@drawable/scroll_bar_icon"
        android:scrollbars="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearlayout" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="110dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/player_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottom_navigation"
        android:background="@drawable/rounded_corner"
        android:padding="5dp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="592dp">

        <ImageView
            android:id="@+id/song_cover_image_view"
            android:layout_width="50dp"
            android:layout_height="50dp"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/song_title_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/song_cover_image_view"
            android:paddingStart="16dp"
            android:text="Đang phát : "
            android:textColor="@color/black"
            android:textSize="20sp"
            tools:ignore="HardcodedText,RtlSymmetry" />


    </RelativeLayout>

    <LinearLayout
        layout="@layout/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bottom_navigation"
        android:layout_alignParentBottom="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" >
        <Button
            android:id="@+id/homeBtn"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:contentDescription="@string/home"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:drawableTop="@drawable/home_icon"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/searchBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/search"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:drawableTop="@drawable/search_icon"
            tools:ignore="VisualLintButtonSize">
        </Button>
        <Button
            android:id="@+id/favouriteBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/favourite"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:drawableTop="@drawable/favorite_icon"
            tools:ignore="VisualLintButtonSize">
        </Button>

        <Button
            android:id="@+id/playlistBtn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/playlist"
            android:drawableTop="@drawable/playlist_add_icon"
            tools:ignore="DuplicateSpeakableTextCheck,VisualLintButtonSize" />

    </LinearLayout>

</RelativeLayout>